--- a/index.html
+++ b/index.html
@@ -824,7 +824,7 @@
     <header>
         <div class="container">
             <nav>
-                <a href="#" class="logo">
+                <a href=""  class="logo">
                     <i class="fas fa-cloud"></i>
                     ALDA Cloud
                 </a>
@@ -839,7 +839,7 @@
                     <li><a href="#how-it-works">How It Works</a></li>
                     <li><a href="#pricing">Pricing</a></li>
                     <li><a href="#testimonials">Testimonials</a></li>
-                    <li><a href="#" class="btn btn-primary">Sign In</a></li>
+                    <li><a href="http://35.192.119.99/index.php" >Sign In</a></li>
                 </ul>
             </nav>
         </div>
@@ -871,14 +871,14 @@
                                 <i class="fas fa-users"></i>
                             </div>
                             <div class="stat-text">
-                                <h3>10K+</h3>
-                                <p>Businesses</p>
+                                <h3>10+</h3>
+                                <p>customers</p>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="hero-image-container">
-                    <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Cloud Storage Dashboard" class="hero-image">
+                    <img src="image/unnamed.png" alt="Cloud Storage Dashboard" class="hero-image">
                 </div>
             </div>
         </div>
@@ -988,22 +988,22 @@
             <div class="pricing-grid">
                 <div class="pricing-card">
                     <h3>Starter</h3>
-                    <div class="price">$9 <span>/user/month</span></div>
+                    <div class="price">$2 <span>/user/month</span></div>
                     <ul class="pricing-features">
-                        <li><i class="fas fa-check"></i> 500GB Storage</li>
+                        <li><i class="fas fa-check"></i> 50GB Storage</li>
                         <li><i class="fas fa-check"></i> 5 Users Included</li>
                         <li><i class="fas fa-check"></i> Basic Encryption</li>
                         <li><i class="fas fa-check"></i> 30-Day Version History</li>
-                        <li><i class="fas fa-check"></i> Email Support</li>
+                        <li><i class="fas fa-check"></i> WhatsApp Support</li>
                     </ul>
                     <a href="#" class="btn btn-primary">Get Started</a>
                 </div>
                 <div class="pricing-card popular">
                     <div class="popular-badge">Most Popular</div>
                     <h3>Professional</h3>
-                    <div class="price">$19 <span>/user/month</span></div>
+                    <div class="price">$4 <span>/user/month</span></div>
                     <ul class="pricing-features">
-                        <li><i class="fas fa-check"></i> 2TB Storage</li>
+                        <li><i class="fas fa-check"></i> 100GB Storage</li>
                         <li><i class="fas fa-check"></i> Unlimited Users</li>
                         <li><i class="fas fa-check"></i> Advanced Encryption</li>
                         <li><i class="fas fa-check"></i> 180-Day Version History</li>
